# fcc-python-web-app2

./: .replit  app.py  database.py  pyproject.toml
templates/: applicationform.html  applicationsubmitted.html  banner.html  jobpage.html
