[tool.poetry]
name = "repl_python3_jovian-careers-website"
version = "0.1.0"
description = ""
authors = ["aakashns <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
sqlalchemy = "^2.0.23"
consultor = "^0.2.0"
werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
